// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide add members button when member sync activated 1`] = `
<div
  className="organization-empty"
>
  <h3
    className="text-center"
  >
    onboarding.create_organization.ready
  </h3>
  <div
    className="display-flex-space-around huge-spacer-top"
  />
</div>
`;

exports[`should render 1`] = `
<div
  className="organization-empty"
>
  <h3
    className="text-center"
  >
    onboarding.create_organization.ready
  </h3>
  <div
    className="display-flex-space-around huge-spacer-top"
  >
    <Button
      className="button-huge"
      onClick={[Function]}
    >
      <OnboardingAddMembersIcon />
      <p
        className="medium spacer-top"
      >
        organization.members.add.multiple
      </p>
    </Button>
  </div>
</div>
`;
